Switched to Bootstrap 4

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,11 +2,12 @@ doctype html
 html
   head
     title
-      | StarWarsShop
+      | SWRPG Shop
+    meta[charset="utf-8"]
+    meta[name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"]
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
   body
     = render 'layouts/navigation/navbar'
     = yield
-    = render 'layouts/footer'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
