--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -1,41 +1,8 @@
-#index-banner.section.no-pad-bot
-  .container
-    br
-    br
-    h1.header.center.blue-grey-text
-      | Star Wars RPG Shop Generator
-    .row.center
-      h5.header.col.s12.light
-        | Quickly and easily generate shopping lists for players
-    .row.center
-      a#download-button.btn-large.waves-effect.waves-light.light-green[href="#"]
-        | Get Started
-    br
-    br
 .container
-  .section
-    .row
-      .col.s12.m4
-        .icon-block
-          h2.center.light-blue-text
-            i.fa.fa-font-awesome.light-green-text
-          h5.center
-            | Highlight
-          p.light
-            | Some Text
-      .col.s12.m4
-        .icon-block
-          h2.center.light-blue-text
-            i.fa.fa-font-awesome.light-green-text
-          h5.center
-            | Highlight
-          p.light
-            | Some Text
-      .col.s12.m4
-        .icon-block
-          h2.center.light-blue-text
-            i.fa.fa-font-awesome.light-green-text
-          h5.center
-            | Highlight
-          p.light
-            | Some Text
+  .jumbotron.text-center[style="margin-top: 50px"]
+    p.h1.text-center
+      | Star Wars RPG Shop Generator
+    p.lead
+      | Quickly and easily generate shopping lists for players
+    a.btn.btn-lg.btn-success[href="#" role="button"]
+      | Create A Shop
