--- a/app/views/layouts/navigation/_navbar.html.slim
+++ b/app/views/layouts/navigation/_navbar.html.slim
@@ -1,11 +1,16 @@
-nav[role="navigation"]
-  .nav-wrapper.container
-    a#logo-container.brand-logo[href="/"] SWRPG Shop
-    ul.right.hide-on-med-and-down
-      li
-        a[href="#"] Log In
-    ul#nav-mobile.side-nav
-      li
-        a[href="#"] Log In
-    a.button-collapse[href="#" data-activates="nav-mobile"]
-      i.fa.fa-bars
+nav.navbar.navbar-toggleable-md.mb-4
+  .container
+    button.navbar-toggler.navbar-toggler-right[type="button" data-toggle="collapse" data-target="#navbarCollapse"]
+      span.fa.fa-bars
+    = link_to root_path, class: 'navbar-brand' do
+      |  Star Wars RPG Shop 
+    / #navbarCollapse.collapse.navbar-collapse
+    /   ul.navbar-nav.mr-auto
+    /     li.nav-item.active
+    /       a.nav-link[href="#"]
+    /         | Home 
+    /         span.sr-only
+    /           | (current)
+    /     li.nav-item
+    /       a.nav-link[href="#"]
+    /         | Link
