Added shop info to shop show page

--- a/app/views/item_attachments/_table.html.slim
+++ b/app/views/item_attachments/_table.html.slim
@@ -1,7 +1,7 @@
-table.table.table-hover.table-sm.item-table
+table.table.table-hover.table-sm.item-table.table-responsive
   thead.thead-inverse
     tr
-      th
+      th[width="125"]
       th Item Name
       th Description
       th Price
