--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -1,4 +1,4 @@
-table.table.table-hover.table-sm.item-table
+table.table.table-hover.table-sm.item-table.table-responsive
   thead.thead-inverse
     tr
       th[width="125"]
