Added base mods. Fixed item attachments

--- a/app/views/armor/_item_row.html.slim
+++ b/app/views/armor/_item_row.html.slim
@@ -5,6 +5,9 @@ tr
     = item.fetch('name')
   td
     = item.fetch('description')
+    br
+    - item.fetch('base_mods', []).each do |mod|
+      p= mod.fetch('misc_desc', '')
   td
     = number_with_delimiter item.fetch('price')
   td
