--- a/app/views/armor/_item_row.html.slim
+++ b/app/views/armor/_item_row.html.slim
@@ -3,6 +3,7 @@ tr
     = image_tag("items/#{item.fetch('image_filename')}", width: '150')
   td
     = item.fetch('name')
+    = item.fetch('is_restricted', false) ? '&nbsp;<span class="restricted-item">(R)</span>'.html_safe : nil
   td
     p= item.fetch('description')
     br
