Added item attachment mods

--- a/app/views/item_attachments/_item_row.html.slim
+++ b/app/views/item_attachments/_item_row.html.slim
@@ -12,3 +12,5 @@ tr
   td
     = number_with_delimiter item.fetch('price')
   td
+    - item.fetch('added_mods', []).each do |mod|
+      p= format_description(mod.fetch('misc_desc', ''))
