--- a/app/views/item_attachments/_table.html.slim
+++ b/app/views/item_attachments/_table.html.slim
@@ -5,5 +5,6 @@ table.table.table-hover.table-sm.item-table.table-responsive
       th Item Name
       th Description
       th Price
+      th Added Mods
   tbody
     = render partial: 'item_attachments/item_row', collection: item_attachments, as: :item
