Added gear type

--- a/app/views/gear/_table.html.slim
+++ b/app/views/gear/_table.html.slim
@@ -7,5 +7,6 @@ table.table.table-hover.table-sm.item-table.table-responsive
       th Price
       th Encumbrance
       th Rarity
+      th Type
   tbody
     = render partial: 'gear/item_row', collection: gear, as: :item
