--- a/app/views/layouts/navigation/_navbar.html.slim
+++ b/app/views/layouts/navigation/_navbar.html.slim
@@ -1,15 +1,3 @@
-nav.navbar.navbar-toggleable-md.mb-4
-  button.navbar-toggler.navbar-toggler-right[type="button" data-toggle="collapse" data-target="#navbarCollapse"]
-    span.fa.fa-bars
+.navbar.navbar-expand-lg.navbar-light.bg-light
   = link_to root_path, class: 'navbar-brand' do
     |  Star Wars RPG Shop 
-  / #navbarCollapse.collapse.navbar-collapse
-  /   ul.navbar-nav.mr-auto
-  /     li.nav-item.active
-  /       a.nav-link[href="#"]
-  /         | Home 
-  /         span.sr-only
-  /           | (current)
-  /     li.nav-item
-  /       a.nav-link[href="#"]
-  /         | Link
