--- a/app/views/shops/show.html.slim
+++ b/app/views/shops/show.html.slim
@@ -1,7 +1,7 @@
 / h1 Shops#show
 / p Find me in app/views/shops/show.html.slim
 
-.card
+.card.p-2
   .card-block
     dl.row
       dt.col-sm-2 Shop Type
