--- a/app/views/shops/new.html.slim
+++ b/app/views/shops/new.html.slim
@@ -1,4 +1,4 @@
-.container
+.container.mt-5
   = simple_form_for :shop, url: shops_path do |f|
     .form-group.row
       label.col-sm-2.col-form-label Shop Type
