--- a/app/views/armor/_item_row.html.slim
+++ b/app/views/armor/_item_row.html.slim
@@ -1,23 +1,23 @@
 tr
-  td
+  td.p-3.align-middle
     = image_tag("items/#{item.fetch('image_filename')}", width: '150')
-  td
+  td.p-3.align-middle
     = item.fetch('name')
     = item.fetch('is_restricted', false) ? '&nbsp;<span class="restricted-item">(R)</span>'.html_safe : nil
-  td
+  td.p-3.align-middle
     p= item.fetch('description')
     br
     - item.fetch('base_mods', []).each do |mod|
       p= format_description(mod.fetch('misc_desc', ''))
-  td
+  td.p-3.align-middle.text-center
     = number_with_delimiter item.fetch('price')
-  td
+  td.p-3.align-middle.text-center
     = item.fetch('defense')
-  td
+  td.p-3.align-middle.text-center
     = item.fetch('soak')
-  td
+  td.p-3.align-middle.text-center
     = item.fetch('encumbrance')
-  td
+  td.p-3.align-middle.text-center
     = item.fetch('hard_points')
-  td
+  td.p-3.align-middle.text-center
     = item.fetch('rarity')
