--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -1,14 +1,14 @@
-table.table.table-hover.table-sm.item-table.table-responsive
+table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
   thead.thead-inverse
     tr
       th[width="125"]
-      th[width="15%"] Item Name
-      th[width="20%"] Description
-      th Price
-      th Defense
-      th Soak
-      th Encumbrance
-      th Hard Points
-      th Rarity
+      th.p-1.text-center.align-middle[width="15%"] Item Name
+      th.p-1.text-center.align-middle[width="20%"] Description
+      th.p-1.text-center.align-middle Price
+      th.p-1.text-center.align-middle Defense
+      th.p-1.text-center.align-middle Soak
+      th.p-1.text-center.align-middle Encumbrance
+      th.p-1.text-center.align-middle Hard Points
+      th.p-1.text-center.align-middle Rarity
   tbody
     = render partial: 'armor/item_row', collection: armor, as: :item
