--- a/app/views/weapons/_table.html.slim
+++ b/app/views/weapons/_table.html.slim
@@ -1,19 +1,19 @@
-table.table.table-hover.table-sm.item-table.table-responsive
+table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
   thead.thead-inverse
     tr
       th[width="125"]
-      th Item Name
-      th[width="15%"] Description
-      th Price
-      th Damage
-      th Crit
-      th Rarity
-      th Encumbrance
-      th Hard Points
-      th Type
-      th Skill
-      th Range
-      th Qualities
+      th.p-1.text-center.align-middle Item Name
+      th.p-1.text-center.align-middle[width="15%"] Description
+      th.p-1.text-center.align-middle Price
+      th.p-1.text-center.align-middle Damage
+      th.p-1.text-center.align-middle Crit
+      th.p-1.text-center.align-middle Rarity
+      th.p-1.text-center.align-middle Encumbrance
+      th.p-1.text-center.align-middle Hard Points
+      th.p-1.text-center.align-middle Type
+      th.p-1.text-center.align-middle Skill
+      th.p-1.text-center.align-middle Range
+      th.p-1.text-center.align-middle Qualities
 
   tbody
     = render partial: 'weapons/item_row', collection: weapons, as: :item
