--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -8,33 +8,28 @@
       | Create A Free Shop
   
   .card-deck
-    .card
-      .col-12
-        .row
-          .col-12.bg-primary.py-5.text-center.text-white
-            h1
-              i.fa.fa-lg.fa-shopping-cart
-        .card-block.p-2.mt-3
-          h4.card-title Customize
-          p.card-text
-            | Choose your shop options including the chance of rare items appearing, price multipliers and number of items available
-    .card
-      .col-12
-        .row
-          .col-12.bg-warning.py-5.text-center.text-white
-            h1
-              i.fa.fa-lg.fa-flash
-        .card-block.p-2.mt-3
-          h4.card-title Generate
-          p.card-text
-            | SWRPG Shop automatically rolls against every item creating a shop in seconds
-    .card
-      .col-12
-        .row
-          .col-12.bg-success.py-5.text-center.text-white
-            h1
-              i.fa.fa-lg.fa-link
-        .card-block.p-2.mt-3
-          h4.card-title Share
-          p.card-text
-            | Once your shop is generated, share the link with the rest of the group to make buying items a breeze
+    .card.mb-5
+      .bg-primary.py-5.text-center.align-middle.text-white
+        h1
+          i.fa.fa-lg.fa-shopping-cart
+      .card-block.p-3.mt-3
+        h4.card-title Customize
+        p.card-text
+          | Choose your shop options including the chance of rare items appearing, price multipliers and number of items available
+    .card.mb-5
+      .bg-warning.py-5.text-center.align-middle.text-white
+        h1
+          .i.fa.fa-lg.fa-flash
+      .card-block.p-3.mt-3
+        h4.card-title Generate
+        p.card-text
+          | SWRPG Shop automatically rolls against every item creating a shop in seconds
+    .card.mb-5
+      .bg-success.py-5.text-center.align-middle.text-white
+        h1
+          i.fa.fa-lg.fa-link
+      .card-block.p-3.mt-3
+        h4.card-title Share
+        p.card-text
+          | Once your shop is generated, share the link with the rest of the group to make buying items a breeze
+  
