Hide analytics in dev

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,6 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = render 'layouts/analytics'
+    = render 'layouts/analytics' if Rails.env.production?
     = render 'layouts/navigation/navbar'
     = yield
