--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -9,3 +9,8 @@
 .restricted-item {
   color: #f44336;
 }
+
+.jumbotron {
+  background: image-url("pattern.png");
+  box-shadow: 0px 1px 2px 0px rgba(202, 202, 202, 0.59);
+}
