--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      | SWRPG Shop
+      = content_for(:title) || 'SWRPG Shop Generator'
     meta[charset="utf-8"]
     meta[name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no"]
     = csrf_meta_tags
