--- a/app/views/shops/new.html.slim
+++ b/app/views/shops/new.html.slim
@@ -1,4 +1,5 @@
-.container.mt-5
+= content_for(:title) { 'Create Shop | SWRPG Shop Generator' }
+.container.my-5.pb-5
   = simple_form_for :shop, url: shops_path do |f|
     .form-group.row
       label.col-sm-2.col-form-label Shop Type
