--- a/app/views/gear/_table.html.slim
+++ b/app/views/gear/_table.html.slim
@@ -2,11 +2,11 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
   thead.thead-inverse
     tr
       th[width="125"]
-      th.p-1.text-center.align-middle Item Name
+      th.p-1.text-center.align-middle[data-sort="string-ins" data-sort-onload="yes"] Item Name
       th.p-1.text-center.align-middle Description
-      th.p-1.text-center.align-middle Price
-      th.p-1.text-center.align-middle Encumbrance
-      th.p-1.text-center.align-middle Rarity
-      th.p-1.text-center.align-middle Type
+      th.p-1.text-center.align-middle[data-sort="int"] Price
+      th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
+      th.p-1.text-center.align-middle[data-sort="int"] Rarity
+      th.p-1.text-center.align-middle[data-sort="string-ins"] Type
   tbody
     = render partial: 'gear/item_row', collection: gear, as: :item
