--- a/app/views/weapons/_table.html.slim
+++ b/app/views/weapons/_table.html.slim
@@ -2,17 +2,17 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
   thead.thead-inverse
     tr
       th[width="125"]
-      th.p-1.text-center.align-middle Item Name
+      th.p-1.text-center.align-middle[data-sort="string-ins" data-sort-onload="yes"] Item Name
       th.p-1.text-center.align-middle[width="15%"] Description
-      th.p-1.text-center.align-middle Price
-      th.p-1.text-center.align-middle Damage
-      th.p-1.text-center.align-middle Crit
-      th.p-1.text-center.align-middle Rarity
-      th.p-1.text-center.align-middle Encumbrance
-      th.p-1.text-center.align-middle Hard Points
-      th.p-1.text-center.align-middle Type
-      th.p-1.text-center.align-middle Skill
-      th.p-1.text-center.align-middle Range
+      th.p-1.text-center.align-middle[data-sort="int"] Price
+      th.p-1.text-center.align-middle[data-sort="int"] Damage
+      th.p-1.text-center.align-middle[data-sort="int"] Crit
+      th.p-1.text-center.align-middle[data-sort="int"] Rarity
+      th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
+      th.p-1.text-center.align-middle[data-sort="int"] Hard Points
+      th.p-1.text-center.align-middle[data-sort="string-ins"] Type
+      th.p-1.text-center.align-middle[data-sort="string-ins"] Skill
+      th.p-1.text-center.align-middle[data-sort="string-ins"] Range
       th.p-1.text-center.align-middle Qualities
 
   tbody
