Change model_type to type

--- a/app/views/gear/_item_row.html.slim
+++ b/app/views/gear/_item_row.html.slim
@@ -16,4 +16,4 @@ tr
   td.p-3.align-middle.text-center
     = item.fetch('rarity')
   td.p-3.align-middle
-    = item.fetch('gear_type')
+    = item.fetch('gear_type', item.fetch('type', nil))
