--- a/app/views/shops/new.html.slim
+++ b/app/views/shops/new.html.slim
@@ -6,6 +6,10 @@
       .col-sm-10
         = f.input :shop_type, collection: ['On The Level', 'Shady', 'Black Market'], label: false, selected: 'On The Level', input_html: { class: 'form-control' }
     .form-group.row
+      label.col-sm-2.col-form-label Shop Specialization
+      .col-sm-10
+        = f.input :specialized_shop, collection: SpecializedShop.all, label: false, include_blank: false, input_html: { class: 'form-control' }
+    .form-group.row
       label.col-sm-2.col-form-label Boost Dice
       .col-sm-10
         = f.input :boost_dice, as: :integer, label: false, input_html: { class: 'form-control', min: 0, max: 10, value: 0 }
