--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -9,7 +9,7 @@
   
   .card-deck
     .card.mb-5
-      .bg-primary.py-5.text-center.align-middle.text-white
+      .bg-primary.py-5.text-center.align-middle.text-white.customize-card-header
         h1
           i.fa.fa-lg.fa-shopping-cart
       .card-block.p-3.mt-3
@@ -17,7 +17,7 @@
         p.card-text
           | Choose your shop options including the chance of rare items appearing, price multipliers and number of items available
     .card.mb-5
-      .bg-warning.py-5.text-center.align-middle.text-white
+      .bg-warning.py-5.text-center.align-middle.text-white.generate-card-header
         h1
           .i.fa.fa-lg.fa-flash
       .card-block.p-3.mt-3
@@ -25,7 +25,7 @@
         p.card-text
           | SWRPG Shop automatically rolls against every item creating a shop in seconds
     .card.mb-5
-      .bg-success.py-5.text-center.align-middle.text-white
+      .bg-success.py-5.text-center.align-middle.text-white.share-card-header
         h1
           i.fa.fa-lg.fa-link
       .card-block.p-3.mt-3
