--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,12 @@ html
   head
     title
       = content_for(:title) || 'SWRPG Shop Generator'
+    meta[name="description" content="Easily create stores for your players"]
+    meta[property="og:description" content="Easily create stores for your players"]
+    meta[property="og:url" content="http://swrpg-shop.com"]
+    meta[property="og:site_name" content="SWRPG Shop Generator"]
+    meta[property="og:image" content=image_url('og-image.png')]
+    meta[name="twitter:card" content="summary_large_image"]
     meta[charset="utf-8"]
     meta[name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no"]
     = csrf_meta_tags
