Render missing shop page for expired shops

--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -10,7 +10,7 @@
   color: #f44336;
 }
 
-.jumbotron {
+.jumbotron.home {
   background: image-url("pattern.png");
   box-shadow: 0px 1px 2px 0px rgba(202, 202, 202, 0.59);
 }
