--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -1,5 +1,5 @@
 .container
-  .jumbotron.text-center[style="margin-top: 50px"]
+  .jumbotron.home.text-center[style="margin-top: 50px"]
     p.h1.text-center
       | Star Wars RPG Shop Generator
     p.lead
