--- a/app/views/item_attachments/_table.html.slim
+++ b/app/views/item_attachments/_table.html.slim
@@ -6,5 +6,6 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
       th.p-1.text-center.align-middle Description
       th.p-1.text-center.align-middle[data-sort="int"] Price
       th.p-1.text-center.align-middle Added Mods
+      th.p-1.text-center.align-middle Roll
   tbody
     = render partial: 'item_attachments/item_row', collection: item_attachments, as: :item
