--- a/app/views/weapons/_table.html.slim
+++ b/app/views/weapons/_table.html.slim
@@ -14,6 +14,7 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
       th.p-1.text-center.align-middle[data-sort="string-ins"] Skill
       th.p-1.text-center.align-middle[data-sort="string-ins"] Range
       th.p-1.text-center.align-middle Qualities
+      th.p-1.text-center.align-middle Roll
 
   tbody
     = render partial: 'weapons/item_row', collection: weapons, as: :item
