--- a/app/views/armor/_table.html.slim
+++ b/app/views/armor/_table.html.slim
@@ -10,5 +10,6 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
       th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
       th.p-1.text-center.align-middle[data-sort="int"] Hard Points
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
+      th.p-1.text-center.align-middle[width="10%"] Roll
   tbody
     = render partial: 'armor/item_row', collection: armor, as: :item
