--- a/app/views/gear/_table.html.slim
+++ b/app/views/gear/_table.html.slim
@@ -8,5 +8,6 @@ table.table.table-hover.table-sm.item-table.table-responsive.table-bordered
       th.p-1.text-center.align-middle[data-sort="int"] Encumbrance
       th.p-1.text-center.align-middle[data-sort="int"] Rarity
       th.p-1.text-center.align-middle[data-sort="string-ins"] Type
+      th.p-1.text-center.align-middle Roll
   tbody
     = render partial: 'gear/item_row', collection: gear, as: :item
