--- a/app/views/item_attachments/_item_row.html.slim
+++ b/app/views/item_attachments/_item_row.html.slim
@@ -14,3 +14,5 @@ tr
   td.p-3.align-middle
     - item.fetch('added_mods', []).each do |mod|
       p= format_description(mod.fetch('misc_desc', ''))
+  td.p-3.align-middle
+    = roll_results(item.fetch('roll_total', [0,0,0]))
