--- a/app/views/static/index.html.slim
+++ b/app/views/static/index.html.slim
@@ -32,4 +32,8 @@
         h4.card-title Share
         p.card-text
           | Once your shop is generated, share the link with the rest of the group to make buying items a breeze
-  
+  .row
+    .col-12.text-center
+      p
+        | Looking for adventure inspiration? Visit 
+        a[href="http://www.swrpg-hooks.com"] SWRPG Hooks
